# project_24

./: .gitignore  README.md
firebase-connection/: .env  readme.md
firebase-connection/src/: main.rs  structs.rs
helper_lib/src/: lib.rs
mongodb-connection/: Cargo.toml
postgres-connection/: .env  Cargo.toml
postgres-connection/src/: main.rs
rust-redis/src/: main.rs
